# paperless-ngx-setup

./: docker-compose.yml  init-database.sh  init-letsencrypt.sh  make-backup.sh  run-verify-timestamps.sh  ssh-config-template
config/nginx/: app.conf
scripts/: add-missing-timestamps.sh  post-consumption.py  post-consumption.sh  verify-timestamps.sh
scripts/add-timestamp-signature/: add-timestamp-signature.py  pyproject.toml
